--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.3.0",
     "firebase": "^9.21.0",
     "lottie-react": "^2.4.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.29.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-svg-piechart": "^2.4.2",
     "speak-tts": "^2.0.8",
     "web-vitals": "^2.1.4"
   },
